# sdf-modal-pro

./: .gitignore  README.md  aim.md  pyproject.toml
examples/: compare_three_way_contact_dynamics.py  compare_three_way_dynamics.py  run_adaptive_patch_activation.py  run_calculix_matrix_storage.py  run_first_version.py  run_ilc_projection.py  run_online_residual_coupling.py  run_patch_hierarchy.py  run_patch_load_basis.py  run_patch_residual_modes.py  run_phase8_validation_matrix.py  run_phase9_claim_gate.py  run_second_version.py  visualize_first_version.py  visualize_second_version.py
modal_contact_rom/: __init__.py
modal_contact_rom/adaptive_activation/: __init__.py  activation.py
modal_contact_rom/contact_dynamics/: __init__.py  forced.py  full_order.py  rigid.py  simulator.py
modal_contact_rom/contact_modes/: __init__.py  loads.py  solve.py
modal_contact_rom/fem_io/: __init__.py  calculix.py  generate.py  mesh.py  sfc_adapter.py
paper/: figure_plan_yao_mapping.md  yao_style_outline.md
sfc/: __init__.py  _cpp_sdf_contact.cpp
tests/: test_calculix_wsl_runner.py  test_contact_alpha_iteration.py  test_dae_dimension_invariance.py  test_first_version_pipeline.py  test_ilc_projection_conservation.py  test_ilc_state_dimension.py  test_online_residual_coupling.py  test_patch_activation_smoothness.py  test_patch_load_basis.py  test_patch_residual_static_completeness.py  test_phase8_validation_matrix.py  test_phase9_claim_gate.py  test_sdf_query_distance.py  test_sdf_to_patch_ilc.py  test_second_version_dynamics.py  test_surface_patch_hierarchy.py
(+90 files in other folders)
